--- a/section5.html
+++ b/section5.html
@@ -21,120 +21,21 @@
 </div>
 
 
-<div class="grid header">
-		<div class="col-1-1">
-			<div class="project6header">
-<!-- 				<img src="img/project6_bodyheader.png"> -->
-			</div>
-		</div>
-</div>
-
-<div class="grid header1">
-	<div class="col-1-1">
-		<div class="projectdescription">
-			<h2>WELCOME WELCOME WELCOME</h2>
-			<h1>7-Day Skillcast Marketing Campaign</h1>
-			<p><b>The Request:</b> Create a visual narrative around taking $500 off a 1-week course, either on-campus or remote format, during the summer.
-			<br><br>
-			<b>The Narrative:</b> The idea of '7-Day Skillcast' emerged through visually relating a 1-week course schedule to a 1-week weather forecast. The working team surveyed past students that took 1-week courses during previous summer months and drew conclusions on their choices of taking this format during the summer and measuring their emotional journey throughout the course. These insights aided in shaping copy and visuals used to market to further consumers.
-			<br><br>
-			<b>The Visuals:</b> Projecting off of the look of a 1-week weather forecast you might see on TV evening news, I updated the look and feel to be more modern - incorporating gradients that play on a nostalgic feel but pairing these styles with clean white lines and emojis. Each day represents the state one would be in in a 1-week course: from diving into the syllabus to feeling overwhelmed with learning new content to feeling confident leaning new skills and developing a portfolio piece.
-			</p>
-		</div>
-	</div>
-</div>
-
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/7DaySkillcast_FBLITW.jpg" target="_blank"> 
-				<img src="img/7DaySkillcast_FBLITW.jpg"> </a>
+				<br>
+				<img src="img/section5/hitplay.jpg" target="_blank">
+				<br><br>
+				</a>
 			</div>
 		</div>
 	</div>
 </div>
 
-<!-- <div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/SeeHerExcel_Tote.jpg"> 
-				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
-				</a>
-			</div>
-		</div>
-	</div>
-</div> -->
 
-
-<!-- <div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/SeeHerExcel_Landingpage.png"> 
-				<img src="img/SeeHerExcel_Landingpage.png" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays a high-level description of the offer paired with a dropdown lead form, highlights narratives of women featured in visuals of the campaign, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
-				</a>
-			</div>
-		</div>
-	</div>
-</div> -->
-
-
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Skillcast_GDN_V2_Dollar_300x600.jpg"> 
-				<img src="img/Skillcast_GDN_V2_Dollar_300x600.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/SSkillcast_GDN_V2_Dollar_336x280.jpg"> 
-				<img src="img/Skillcast_GDN_V2_Dollar_336x280.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-	<div class="col-1-3">
-		<div class="project1">
-			<p><b>7-Day Skillcast: Google Display Network Paid Ads</b> <!-- Created two sets of creative to test against eachother. Once tested, the winning concept paired with creative between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful background with aspirational language highlighting YOU could be the next leader in tech by learning these offered skills), the ad on the left performed better. These results could be based on the inclusion of photography of people and the eye-catching rotation of the .gif. --></p>
-			</a>
-		</div>
-	</div>
-</div>
-
-<!-- <div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Skillcast_GDN_V1_336x280.jpg"> 
-				<img src="img/Skillcast_GDN_V1_336x280.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Skillcast_GDN_V2_Dollar_336x280.jpg"> 
-				<img src="img/Skillcast_GDN_V2_Dollar_336x280.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-</div> -->
 
 
 <br><br><Br>
@@ -194,13 +95,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="7dayskillcast.html">
+				<a class="overlay" href="section5.html">
 				  <div class="overlay-text">
-				  	<h1>7-Day Skillcast Marketing Campaign</h1>
-					<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
+				  	<h1>Hit Play Micro Site - Marketing Campaign</h1>
+					<h2>UI Design</h2>
 				  	</div>
 				</a>
-				<img src="img/skillcast_homepage.jpg" title="7-Day Skillcast">
+				<img src="img/index/section5.jpg" title="7-Day Skillcast">
 			</div>
 		</div>
 		<div class="col-1-3">
