--- a/section8.html
+++ b/section8.html
@@ -123,13 +123,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="7dayskillcast.html">
+				<a class="overlay" href="section5.html">
 				  <div class="overlay-text">
-				  	<h1>7-Day Skillcast Marketing Campaign</h1>
-					<h2>CAMPAIGN | SALE | VISUAL NARRATIVE</h2>
+				  	<h1>Hit Play Micro Site - Marketing Campaign</h1>
+					<h2>UI Design</h2>
 				  	</div>
 				</a>
-				<img src="img/skillcast_homepage.jpg" title="7-Day Skillcast">
+				<img src="img/index/section5.jpg" title="7-Day Skillcast">
 			</div>
 		</div>
 		<div class="col-1-3">
