--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div class="col-2-3">
-		<h3>Amanda is multidisiciplinary designer with over half a decade developing holistic design solutions across a range of challenges. Originally from Connecticut, she now resides in Brooklyn, NY.</h3>
+		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges. Originally from Connecticut, she now resides in Brooklyn, NY.</h3>
 		<br>
 		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.
 		<br><br>
